# pme-hackathon

./: .gitignore  ATHENA_DECRYPTION_GUIDE.md  CLAUDE.md  Hackathon_customer_data.csv  PME_IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: terraform.yml  test.yml
connector/: Dockerfile  deploy.sh  federation.py  handler.py  rbac.py
data/: Hackathon_auth_data.csv  Hackathon_customer_data_2.csv  Hackathon_customer_data_3.csv
docs/: ATHENA_DECRYPTION_GUIDE.md  PME_FAQ.md  PME_IMPLEMENTATION_PLAN.md  PME_PIPELINE_REPORT.md  SNOWFLAKE_ICEBERG_SETUP.md  SPARK_PME_CHALLENGE.md
infra/: athena.tf  federated.tf  glue.tf  iam.tf  iceberg.tf  kms.tf  lambda.tf  main.tf  outputs.tf  s3.tf  snowflake.tf  terraform.tfvars  variables.tf
lambda/: Dockerfile  deploy.sh  handler.py
notebooks/: athena_spark_pme_decrypt.ipynb
pme/: PME_PIPELINE_REPORT.md  demo_encrypt.py  demo_read_pipeline.py  inspect_encrypted.py  pyproject.toml  requirements.txt
pme/src/: config.py  decryption.py  encryption.py  kms_client.py
pme/tests/: conftest.py  test_decryption.py  test_encryption.py  test_integration.py  test_kms_client.py
snowflake/: Dockerfile  deploy.sh  handler.py  iceberg_setup.sql  register_iceberg_glue.sh  requirements.txt  setup.sql
