[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pme"
version = "0.1.0"
description = "Parquet Modular Encryption with AWS KMS — Winter Hackathon 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=15.0",
    "boto3>=1.34",
    "faker>=22.0",
    "s3fs>=2024.2",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require AWS credentials",
]
